# NewsNexus

./: .replit  README.md  advertisement.py  affiliate.py  ai_agents.py  ai_services.py  analytics.py  app.py  auth.py  blockchain.py  blockchain_review.py  color_psychology.py  config.py  database.py  foundational_system_appreciation.md  geo_location.py  geo_services.py  news_aggregator.py  pyproject.toml  replit.md  subscription.py  utils.py  zoho_integration.py
.github/: pull_request_template.md
agents/: content_agent.py  core_agent.py  news_agent.py  orchestrator.py  review_agent.py
components/: ad_manager.py  map_interface.py  news_card.py  theme_manager.py
database/: __init__.py  connection.py  models.py
docs/: 01-product-vision-strategy.md  02-product-requirements-document-prd.md  03-market-requirements-document-mrd.md  04-product-roadmap.md  05-user-personas-journey-maps.md  06-wireframes-and-mockups.md  07-ux-ui-design-guidelines.md  08-technical-design-document-tdd.md  09-api-documentation.md  10-software-development-plan.md  11-qa-testing-plan-and-acceptance-criteria.md  12-infrastructure-and-security-documentation.md  README.md  ai-agent-context.md  child-friendly-architecture.md  deployment-runbook.md  pr-history.md  product-foundation.md  release-notes.md  troubleshooting-guide.md  user-manual-help-center-faq.md
legal/: data-processing-agreement-dpa.md  eula.md  privacy-policy-and-gdpr.md  terms-of-purchase.md  terms-of-service.md
pages/: admin.py  affiliate_dashboard.py  analytics.py  dashboard.py  news_feed.py  partner_portal.py  profile.py  (+1 more)
(+10 files in other folders)
