[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.46.1",
    "trafilatura>=2.0.0",
    "scikit-learn>=1.7.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "feedparser>=6.0.11",
    "stripe>=12.3.0",
]
